@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="Content-Type" content="text/html">
+     <script src='jquery'></script>
+     <meta http-equiv="Content-Type" content="text/html">
  </head>
  <body>
 {% block content %}
