@@ -1,8 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<h2>Version 1</h2>
 <a href='upload'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
-<br>
+<br/>
+
+
+<h2>Version 2</h2>
+<a href='upload2'>Upload an image</a> |
+<a href='image'>Show most recent image</a>
+<br/>
+<br/>
+<br/>
+
+
+
 <img width=40% src='image_raw?special=latest'/>
 {% endblock %}
