@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-Upload a PNG:
+Upload a PNG, JPG, TIF, or TIFF:
 
 <form enctype='multipart/form-data' action='upload_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
