@@ -1,0 +1,16 @@
+{% extends "base.html" %}
+
+
+{% block content %}
+
+Upload a PNG, JPG, TIF, or TIFF (other version):
+
+<form enctype='multipart/form-data' action='upload2_receive' method='POST'>
+
+    Filename: <input type='file' name='file'><p>
+    <input type='submit'>
+</form>
+
+
+{% endblock %}
+
