@@ -1,0 +1,14 @@
+{% extends "base.html" %}
+
+
+{% block content %}
+Here is your image:
+
+<p>
+<img width=40% src='image_raw?special=latest'/>
+</p>
+
+
+
+{% endblock %}
+
