@@ -9,3 +9,9 @@
 2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>
 
  * Initialized repository, created server.py and README.
+
+2014-03-27 Omar Ali <o2themar6@live.com>
+* For hw 8 did project 8 to support Tiff, tif and jpeg for the image app.
+Use upload 2 for testing this feature
+
+ 
